--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.2",
+    "@hubspot/api-client": "^2.1.1",
+    "next": "^9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
+    "@vercel/node": "^1.8.0",
     "typescript": "^3.9.7"
   }
 }
