--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hubspot/api-client": "^2.1.1",
+    "@slack/web-api": "^5.11.0",
     "next": "^9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
