--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hubspot/api-client": "^2.1.1",
-    "@slack/web-api": "^5.11.0",
-    "next": "^9.5.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "next": "^10.0.3",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@types/react": "^16.9.46",
-    "@vercel/node": "^1.8.0",
-    "typescript": "^3.9.7"
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@vercel/node": "^1.8.5",
+    "typescript": "^4.1.2"
   }
 }
