--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "model": "node -r dotenv/config node_modules/.bin/graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.4",
+    "graphql": "^15.4.0",
     "next": "^10.0.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.19.4",
+    "@graphql-codegen/fragment-matcher": "^2.0.1",
+    "@graphql-codegen/typescript": "^1.19.0",
+    "@graphql-codegen/typescript-apollo-client-helpers": "^1.1.1",
+    "@graphql-codegen/typescript-operations": "^1.17.12",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@vercel/node": "^1.8.5",
