--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.2",
     "react-markdown": "^5.0.3"
   },
   "devDependencies": {
