--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
-    "react-markdown": "^5.0.3"
+    "react-markdown": "^5.0.3",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.19.4",
