--- a/codegen.yml
+++ b/codegen.yml
@@ -5,7 +5,7 @@ schema:
 documents:
   - pokko/queries/*.graphql
 generates:
-  ./api/queries.ts:
+  ./pokko/queries.ts:
     plugins:
       - typescript
       - typescript-operations
