--- a/package.json
+++ b/package.json
@@ -9,27 +9,25 @@
     "model": "node -r dotenv/config node_modules/.bin/graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.4",
+    "@apollo/client": "^3.3.6",
     "graphql": "^15.4.0",
-    "next": "^10.0.3",
+    "next": "^10.0.4",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.12.2",
-    "react-markdown": "^5.0.3",
-    "slate": "^0.59.0",
-    "slate-react": "^0.59.0"
+    "react-hook-form": "^6.14.0",
+    "react-markdown": "^5.0.3"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.19.4",
+    "@graphql-codegen/cli": "^1.20.0",
     "@graphql-codegen/fragment-matcher": "^2.0.1",
-    "@graphql-codegen/typescript": "^1.19.0",
-    "@graphql-codegen/typescript-apollo-client-helpers": "^1.1.1",
-    "@graphql-codegen/typescript-operations": "^1.17.12",
+    "@graphql-codegen/typescript": "^1.20.0",
+    "@graphql-codegen/typescript-apollo-client-helpers": "^1.1.2",
+    "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
-    "@types/node": "^14.14.10",
+    "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@vercel/node": "^1.8.5",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   }
 }
