--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.3.6",
     "graphql": "^15.4.0",
     "next": "^10.0.4",
+    "next-sitemap": "^1.3.29",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
