--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "graphql": "^15.5.0",
-    "next": "^10.0.7",
+    "next": "^10.2.0",
     "next-sitemap": "^1.5.6",
-    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
-    "react-markdown": "^5.0.3"
+    "react-markdown": "^5.0.3",
+    "sass": "^1.32.12"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.20.1",
